Shows walls over shadows